--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="small_fare_">Small Fare - Big Life</string>
     <string name="powered_by">Powered by</string>
     <string name="azaar">azaar</string>
+
+    <string-array name="spinner_mode">
+        <item>Seller</item>
+        <item>Time</item>
+    </string-array>
+
 </resources>
