MyFaresFragment updated, Api calls updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,12 @@
         <item>Db</item>
     </string-array>
 
+    <string-array name="oder_options_array">
+        <item>Incoming</item>
+        <item>Accepted</item>
+        <item>Declined</item>
+        <item>Delivering</item>
+        <item>Delivered</item>
+    </string-array>
+
 </resources>
